--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.config.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,7 +22,8 @@
     "@angular/router": "^6.1.0",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
-    "http-errors": "^1.7.1",
+    "jquery": "^3.3.1",
+    "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.2.0",
     "zone.js": "^0.8.26"
   },
